docs: clear messages; units rem; add ul[role="list"] | fix: font h1 and nav; gap main

--- a/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/footer.css
+++ b/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/footer.css
@@ -1,5 +1,5 @@
-@media (width >= 80em) {
-    footer span:nth-child(1) {
+@media (width >= 80rem) {
+    footer span {
         margin-right: auto;
     }
 }
