--- a/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/global.css
+++ b/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/global.css
@@ -1,9 +1,3 @@
-/* *,
-*::before,
-*::after {
-    box-sizing: border-box;
-} */
-
 * {
     margin: 0;
     padding: 0;
@@ -20,22 +14,23 @@
     --text-color-secondary: #6C6C6C;
 
     --font-family: "Poppins", sans-serif;
-    --text-lg: bold 32px/125% var(--font-family);
-    --text-md: 14px/170% var(--font-family);
-    --text-sm: 12px/170% var(--font-family);
+    --text-xl: bold 2rem/125% var(--font-family);
+    --text-lg: bold 1.5rem/125% var(--font-family);
+    --text-nav: 1rem/0 var(--font-family);
+    --text-md: .875rem/150% var(--font-family);
+    --text-sm: .75rem/150% var(--font-family);
 
     /* padding */
     --p-header: 2rem;
 
-    --px-md: 1rem;
     --px-lg: 1rem;
     
-    --py-nav-ul: .5rem;
     --py-md: 1rem;
     --py-lg: 1rem;
+    --py-nav-ul: .5rem;
 }
 
-@media (width >= 80em) {
+@media (width >= 80rem) {
     :root {
         --px-lg: 2rem;
 
@@ -60,6 +55,6 @@ a:hover {
     text-decoration: underline;
 }
 
-li {
+ul[role="list"] {
     list-style: none;
 }
