--- a/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/main.css
+++ b/09-Desafio-Responsividade/responsive_from_base/01-Desafio-Perfil_de_Viagens/styles/main.css
@@ -1,19 +1,16 @@
-/* main {
-    display: flex;
-    flex-wrap: wrap;
-    padding-block: 24px;
-    gap: 24px;
-} */
-
 main img {
-    width: 328px;
-    height: 328px;
+    width: 20.5rem;
+    height: 20.5rem;
     object-fit: cover;
 }
 
-@media (width >= 80em) {
+@media (width >= 80rem) {
+    main.gap-16 {
+        gap: 1.5rem;
+    }
+
     main img {
-        width: 286px;
-        height: 286px;
+        width: 17.875rem;
+        height: 17.875rem;
     }
 }
